Various "no member named" build errors in FunctionBrokerIPCUtils.h with --disable-accessibility
Categories
(Core :: IPC, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | wontfix |
| firefox86 | --- | fixed |
People
(Reporter: RyanVM, Assigned: sg)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
0:56.55 In file included from UnifiedProtocols16.cpp:2:
0:56.55 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/PFunctionBrokerChild.cpp:7:
0:56.55 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/_ipdlheaders\mozilla/plugins/PFunctionBrokerChild.h:18:
0:56.55 C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include\mozilla/plugins/FunctionBrokerIPCUtils.h(401,56): error: no member named 'Log' in 'IPC::ParamTraits<nsTArray<mozilla::plugins::_IPCInternetBuffers::Buffer>>'
0:56.55 ParamTraits<nsTArray<IPCInternetBuffers::Buffer>>::Log(aParam.mBuffers,
0:56.55 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
0:57.64 In file included from UnifiedProtocols16.cpp:2:
0:57.64 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/PFunctionBrokerChild.cpp:7:
0:57.64 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/_ipdlheaders\mozilla/plugins/PFunctionBrokerChild.h:9:
0:57.64 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/_ipdlheaders\mozilla/plugins/PFunctionBroker.h:21:
0:57.64 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include/mozilla/ipc/Shmem.h:18:
0:57.64 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include\mozilla/ipc/SharedMemory.h:15:
0:57.64 C:/Users/Ryan/repos/mozilla/ipc/chromium/src\chrome/common/ipc_message_utils.h(119,33): error: no member named 'Write' in 'IPC::ParamTraits<CopyableTArray<mozilla::plugins::_IPCInternetBuffers::Buffer>>'
0:57.64 ParamTraits<std::decay_t<P>>::Write(m, std::forward<P>(p));
0:57.64 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
0:57.64 C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include\mozilla/plugins/FunctionBrokerIPCUtils.h(392,5): note: in instantiation of function template specialization 'IPC::WriteParam<const CopyableTArray<mozilla::plugins::_IPCInternetBuffers::Buffer> &>' requested here
0:57.64 WriteParam(aMsg, aParam.mBuffers);
0:57.64 ^
0:57.64 In file included from UnifiedProtocols16.cpp:2:
0:57.64 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/PFunctionBrokerChild.cpp:7:
0:57.65 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/_ipdlheaders\mozilla/plugins/PFunctionBrokerChild.h:9:
0:57.65 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/ipc/ipdl/_ipdlheaders\mozilla/plugins/PFunctionBroker.h:21:
0:57.65 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include/mozilla/ipc/Shmem.h:18:
0:57.65 In file included from C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include\mozilla/ipc/SharedMemory.h:15:
0:57.65 C:/Users/Ryan/repos/mozilla/ipc/chromium/src\chrome/common/ipc_message_utils.h(125,26): error: no member named 'Read' in 'IPC::ParamTraits<CopyableTArray<mozilla::plugins::_IPCInternetBuffers::Buffer>>'
0:57.65 return ParamTraits<P>::Read(m, iter, p);
0:57.65 ~~~~~~~~~~~~~~~~^
0:57.65 C:/Users/Ryan/repos/mozilla/objdir-clang/dist/include\mozilla/plugins/FunctionBrokerIPCUtils.h(397,12): note: in instantiation of function template specialization 'IPC::ReadParam<CopyableTArray<mozilla::plugins::_IPCInternetBuffers::Buffer>>' requested here
0:57.65 return ReadParam(aMsg, aIter, &aResult->mBuffers);
0:57.65 ^
0:57.87 3 errors generated.
Reproducible on Try also:
https://treeherder.mozilla.org/logviewer?job_id=324266628&repo=try&lineNumber=20761
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
Thanks for the report. I will provide a patch.
| Assignee | ||
Comment 2•5 years ago
|
||
I have a patch that fixes the build on Windows: https://treeherder.mozilla.org/jobs?repo=try&revision=d07f503d17bc6f5499065414ff496f8e961f8411&selectedTaskRun=Q93d7P2RQciPKhaG0ef_fA.0
The Android build is broken though, is that expected?
| Assignee | ||
Comment 3•5 years ago
|
||
| Reporter | ||
Comment 4•5 years ago
|
||
Could very well be unfiled bustage from disabling a11y on Android, yeah. Also, confirmed locally that my builds are happy again too now, thanks!
Comment 6•5 years ago
|
||
| bugherder | ||
Comment 7•5 years ago
|
||
The patch landed in nightly and beta is affected.
:sg, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 8•5 years ago
|
||
I don't think this needs an uplift, unless anyone requests that. It could be uplifted anytime without risk though.
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
Description
•