Bug 1681987 - Add missing includes to fix build with --disable-accessibility. r=andi

Differential Revision: https://phabricator.services.mozilla.com/D99658